[tool.poetry]
name = "streamunolib"
version = "0.2.1"
description = "Library of generic transform components."
authors = ["Pierre Chanial <pierre.chanial@apc.in2p3.fr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_third_party = ["pytest"]
