[tool.poetry]
name = "streamunolib"
version = "0.4.3"
description = "Library of generic transform components."
authors = ["Pierre Chanial <pierre.chanial@apc.in2p3.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_third_party = ["pytest", "typing_extensions"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=streamunolib --cov-report=term-missing"
testpaths = [
    "tests",
]
